src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AT
    FROM
    INTEGRATE
    LIMIT
    STR
    TO
    VARIABLE

Grammar

Rule 0     S' -> command
Rule 1     command -> equation
Rule 2     command -> solve
Rule 3     command -> differentiate
Rule 4     equation -> equation expression
Rule 5     equation -> expression
Rule 6     expression -> expression1
Rule 7     expression -> expression ADD expression1
Rule 8     expression -> expression SUB expression1
Rule 9     expression1 -> expression2
Rule 10    expression1 -> expression1 MUL expression2
Rule 11    expression1 -> expression1 DIV expression2
Rule 12    expression2 -> expression3
Rule 13    expression2 -> expression2 POW expression3
Rule 14    expression3 -> LP expression RP
Rule 15    expression3 -> VAR
Rule 16    expression3 -> NUM
Rule 17    expression3 -> trig
Rule 18    trig -> SIN LP expression RP
Rule 19    trig -> COS LP expression RP
Rule 20    trig -> TG LP expression RP
Rule 21    trig -> CTG LP expression RP
Rule 22    solve -> SOLVE FOR LP vars RP EQ LP nums RP equation
Rule 23    vars -> vars VAR
Rule 24    vars -> VAR
Rule 25    nums -> nums NUM
Rule 26    nums -> NUM
Rule 27    differentiate -> DIFFERENTIATE equation OVER VAR

Terminals, with rules where they appear

ADD                  : 7
AT                   : 
COS                  : 19
CTG                  : 21
DIFFERENTIATE        : 27
DIV                  : 11
EQ                   : 22
FOR                  : 22
FROM                 : 
INTEGRATE            : 
LIMIT                : 
LP                   : 14 18 19 20 21 22 22
MUL                  : 10
NUM                  : 16 25 26
OVER                 : 27
POW                  : 13
RP                   : 14 18 19 20 21 22 22
SIN                  : 18
SOLVE                : 22
STR                  : 
SUB                  : 8
TG                   : 20
TO                   : 
VAR                  : 15 23 24 27
VARIABLE             : 
error                : 

Nonterminals, with rules where they appear

command              : 0
differentiate        : 3
equation             : 1 4 22 27
expression           : 4 5 7 8 14 18 19 20 21
expression1          : 6 7 8 10 11
expression2          : 9 10 11 13
expression3          : 12 13
nums                 : 22 25
solve                : 2
trig                 : 17
vars                 : 22 23

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . equation
    (2) command -> . solve
    (3) command -> . differentiate
    (4) equation -> . equation expression
    (5) equation -> . expression
    (22) solve -> . SOLVE FOR LP vars RP EQ LP nums RP equation
    (27) differentiate -> . DIFFERENTIATE equation OVER VAR
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    SOLVE           shift and go to state 6
    DIFFERENTIATE   shift and go to state 8
    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    command                        shift and go to state 1
    equation                       shift and go to state 2
    solve                          shift and go to state 3
    differentiate                  shift and go to state 4
    expression                     shift and go to state 5
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 1

    (0) S' -> command .



state 2

    (1) command -> equation .
    (4) equation -> equation . expression
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    $end            reduce using rule 1 (command -> equation .)
    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 19
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 3

    (2) command -> solve .

    $end            reduce using rule 2 (command -> solve .)


state 4

    (3) command -> differentiate .

    $end            reduce using rule 3 (command -> differentiate .)


state 5

    (5) equation -> expression .
    (7) expression -> expression . ADD expression1
    (8) expression -> expression . SUB expression1

    LP              reduce using rule 5 (equation -> expression .)
    VAR             reduce using rule 5 (equation -> expression .)
    NUM             reduce using rule 5 (equation -> expression .)
    SIN             reduce using rule 5 (equation -> expression .)
    COS             reduce using rule 5 (equation -> expression .)
    TG              reduce using rule 5 (equation -> expression .)
    CTG             reduce using rule 5 (equation -> expression .)
    $end            reduce using rule 5 (equation -> expression .)
    OVER            reduce using rule 5 (equation -> expression .)
    ADD             shift and go to state 20
    SUB             shift and go to state 21


state 6

    (22) solve -> SOLVE . FOR LP vars RP EQ LP nums RP equation

    FOR             shift and go to state 22


state 7

    (14) expression3 -> LP . expression RP
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 23
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 8

    (27) differentiate -> DIFFERENTIATE . equation OVER VAR
    (4) equation -> . equation expression
    (5) equation -> . expression
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    equation                       shift and go to state 24
    expression                     shift and go to state 5
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 9

    (15) expression3 -> VAR .

    POW             reduce using rule 15 (expression3 -> VAR .)
    MUL             reduce using rule 15 (expression3 -> VAR .)
    DIV             reduce using rule 15 (expression3 -> VAR .)
    ADD             reduce using rule 15 (expression3 -> VAR .)
    SUB             reduce using rule 15 (expression3 -> VAR .)
    LP              reduce using rule 15 (expression3 -> VAR .)
    VAR             reduce using rule 15 (expression3 -> VAR .)
    NUM             reduce using rule 15 (expression3 -> VAR .)
    SIN             reduce using rule 15 (expression3 -> VAR .)
    COS             reduce using rule 15 (expression3 -> VAR .)
    TG              reduce using rule 15 (expression3 -> VAR .)
    CTG             reduce using rule 15 (expression3 -> VAR .)
    $end            reduce using rule 15 (expression3 -> VAR .)
    RP              reduce using rule 15 (expression3 -> VAR .)
    OVER            reduce using rule 15 (expression3 -> VAR .)


state 10

    (6) expression -> expression1 .
    (10) expression1 -> expression1 . MUL expression2
    (11) expression1 -> expression1 . DIV expression2

    ADD             reduce using rule 6 (expression -> expression1 .)
    SUB             reduce using rule 6 (expression -> expression1 .)
    LP              reduce using rule 6 (expression -> expression1 .)
    VAR             reduce using rule 6 (expression -> expression1 .)
    NUM             reduce using rule 6 (expression -> expression1 .)
    SIN             reduce using rule 6 (expression -> expression1 .)
    COS             reduce using rule 6 (expression -> expression1 .)
    TG              reduce using rule 6 (expression -> expression1 .)
    CTG             reduce using rule 6 (expression -> expression1 .)
    $end            reduce using rule 6 (expression -> expression1 .)
    RP              reduce using rule 6 (expression -> expression1 .)
    OVER            reduce using rule 6 (expression -> expression1 .)
    MUL             shift and go to state 25
    DIV             shift and go to state 26


state 11

    (9) expression1 -> expression2 .
    (13) expression2 -> expression2 . POW expression3

    MUL             reduce using rule 9 (expression1 -> expression2 .)
    DIV             reduce using rule 9 (expression1 -> expression2 .)
    ADD             reduce using rule 9 (expression1 -> expression2 .)
    SUB             reduce using rule 9 (expression1 -> expression2 .)
    LP              reduce using rule 9 (expression1 -> expression2 .)
    VAR             reduce using rule 9 (expression1 -> expression2 .)
    NUM             reduce using rule 9 (expression1 -> expression2 .)
    SIN             reduce using rule 9 (expression1 -> expression2 .)
    COS             reduce using rule 9 (expression1 -> expression2 .)
    TG              reduce using rule 9 (expression1 -> expression2 .)
    CTG             reduce using rule 9 (expression1 -> expression2 .)
    $end            reduce using rule 9 (expression1 -> expression2 .)
    RP              reduce using rule 9 (expression1 -> expression2 .)
    OVER            reduce using rule 9 (expression1 -> expression2 .)
    POW             shift and go to state 27


state 12

    (12) expression2 -> expression3 .

    POW             reduce using rule 12 (expression2 -> expression3 .)
    MUL             reduce using rule 12 (expression2 -> expression3 .)
    DIV             reduce using rule 12 (expression2 -> expression3 .)
    ADD             reduce using rule 12 (expression2 -> expression3 .)
    SUB             reduce using rule 12 (expression2 -> expression3 .)
    LP              reduce using rule 12 (expression2 -> expression3 .)
    VAR             reduce using rule 12 (expression2 -> expression3 .)
    NUM             reduce using rule 12 (expression2 -> expression3 .)
    SIN             reduce using rule 12 (expression2 -> expression3 .)
    COS             reduce using rule 12 (expression2 -> expression3 .)
    TG              reduce using rule 12 (expression2 -> expression3 .)
    CTG             reduce using rule 12 (expression2 -> expression3 .)
    $end            reduce using rule 12 (expression2 -> expression3 .)
    RP              reduce using rule 12 (expression2 -> expression3 .)
    OVER            reduce using rule 12 (expression2 -> expression3 .)


state 13

    (16) expression3 -> NUM .

    POW             reduce using rule 16 (expression3 -> NUM .)
    MUL             reduce using rule 16 (expression3 -> NUM .)
    DIV             reduce using rule 16 (expression3 -> NUM .)
    ADD             reduce using rule 16 (expression3 -> NUM .)
    SUB             reduce using rule 16 (expression3 -> NUM .)
    LP              reduce using rule 16 (expression3 -> NUM .)
    VAR             reduce using rule 16 (expression3 -> NUM .)
    NUM             reduce using rule 16 (expression3 -> NUM .)
    SIN             reduce using rule 16 (expression3 -> NUM .)
    COS             reduce using rule 16 (expression3 -> NUM .)
    TG              reduce using rule 16 (expression3 -> NUM .)
    CTG             reduce using rule 16 (expression3 -> NUM .)
    $end            reduce using rule 16 (expression3 -> NUM .)
    RP              reduce using rule 16 (expression3 -> NUM .)
    OVER            reduce using rule 16 (expression3 -> NUM .)


state 14

    (17) expression3 -> trig .

    POW             reduce using rule 17 (expression3 -> trig .)
    MUL             reduce using rule 17 (expression3 -> trig .)
    DIV             reduce using rule 17 (expression3 -> trig .)
    ADD             reduce using rule 17 (expression3 -> trig .)
    SUB             reduce using rule 17 (expression3 -> trig .)
    LP              reduce using rule 17 (expression3 -> trig .)
    VAR             reduce using rule 17 (expression3 -> trig .)
    NUM             reduce using rule 17 (expression3 -> trig .)
    SIN             reduce using rule 17 (expression3 -> trig .)
    COS             reduce using rule 17 (expression3 -> trig .)
    TG              reduce using rule 17 (expression3 -> trig .)
    CTG             reduce using rule 17 (expression3 -> trig .)
    $end            reduce using rule 17 (expression3 -> trig .)
    RP              reduce using rule 17 (expression3 -> trig .)
    OVER            reduce using rule 17 (expression3 -> trig .)


state 15

    (18) trig -> SIN . LP expression RP

    LP              shift and go to state 28


state 16

    (19) trig -> COS . LP expression RP

    LP              shift and go to state 29


state 17

    (20) trig -> TG . LP expression RP

    LP              shift and go to state 30


state 18

    (21) trig -> CTG . LP expression RP

    LP              shift and go to state 31


state 19

    (4) equation -> equation expression .
    (7) expression -> expression . ADD expression1
    (8) expression -> expression . SUB expression1

    LP              reduce using rule 4 (equation -> equation expression .)
    VAR             reduce using rule 4 (equation -> equation expression .)
    NUM             reduce using rule 4 (equation -> equation expression .)
    SIN             reduce using rule 4 (equation -> equation expression .)
    COS             reduce using rule 4 (equation -> equation expression .)
    TG              reduce using rule 4 (equation -> equation expression .)
    CTG             reduce using rule 4 (equation -> equation expression .)
    $end            reduce using rule 4 (equation -> equation expression .)
    OVER            reduce using rule 4 (equation -> equation expression .)
    ADD             shift and go to state 20
    SUB             shift and go to state 21


state 20

    (7) expression -> expression ADD . expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression1                    shift and go to state 32
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 21

    (8) expression -> expression SUB . expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression1                    shift and go to state 33
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 22

    (22) solve -> SOLVE FOR . LP vars RP EQ LP nums RP equation

    LP              shift and go to state 34


state 23

    (14) expression3 -> LP expression . RP
    (7) expression -> expression . ADD expression1
    (8) expression -> expression . SUB expression1

    RP              shift and go to state 35
    ADD             shift and go to state 20
    SUB             shift and go to state 21


state 24

    (27) differentiate -> DIFFERENTIATE equation . OVER VAR
    (4) equation -> equation . expression
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    OVER            shift and go to state 36
    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 19
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 25

    (10) expression1 -> expression1 MUL . expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression2                    shift and go to state 37
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 26

    (11) expression1 -> expression1 DIV . expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression2                    shift and go to state 38
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 27

    (13) expression2 -> expression2 POW . expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression3                    shift and go to state 39
    trig                           shift and go to state 14

state 28

    (18) trig -> SIN LP . expression RP
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 40
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 29

    (19) trig -> COS LP . expression RP
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 41
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 30

    (20) trig -> TG LP . expression RP
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 42
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 31

    (21) trig -> CTG LP . expression RP
    (6) expression -> . expression1
    (7) expression -> . expression ADD expression1
    (8) expression -> . expression SUB expression1
    (9) expression1 -> . expression2
    (10) expression1 -> . expression1 MUL expression2
    (11) expression1 -> . expression1 DIV expression2
    (12) expression2 -> . expression3
    (13) expression2 -> . expression2 POW expression3
    (14) expression3 -> . LP expression RP
    (15) expression3 -> . VAR
    (16) expression3 -> . NUM
    (17) expression3 -> . trig
    (18) trig -> . SIN LP expression RP
    (19) trig -> . COS LP expression RP
    (20) trig -> . TG LP expression RP
    (21) trig -> . CTG LP expression RP

    LP              shift and go to state 7
    VAR             shift and go to state 9
    NUM             shift and go to state 13
    SIN             shift and go to state 15
    COS             shift and go to state 16
    TG              shift and go to state 17
    CTG             shift and go to state 18

    expression                     shift and go to state 43
    expression1                    shift and go to state 10
    expression2                    shift and go to state 11
    expression3                    shift and go to state 12
    trig                           shift and go to state 14

state 32

    (7) expression -> expression ADD expression1 .
    (10) expression1 -> expression1 . MUL expression2
    (11) expression1 -> expression1 . DIV expression2

    ADD             reduce using rule 7 (expression -> expression ADD expression1 .)
    SUB             reduce using rule 7 (expression -> expression ADD expression1 .)
    LP              reduce using rule 7 (expression -> expression ADD expression1 .)
    VAR             reduce using rule 7 (expression -> expression ADD expression1 .)
    NUM             reduce using rule 7 (expression -> expression ADD expression1 .)
    SIN             reduce using rule 7 (expression -> expression ADD expression1 .)
    COS             reduce using rule 7 (expression -> expression ADD expression1 .)
    TG              reduce using rule 7 (expression -> expression ADD expression1 .)
    CTG             reduce using rule 7 (expression -> expression ADD expression1 .)
    $end            reduce using rule 7 (expression -> expression ADD expression1 .)
    RP              reduce using rule 7 (expression -> expression ADD expression1 .)
    OVER            reduce using rule 7 (expression -> expression ADD expression1 .)
    MUL             shift and go to state 25
    DIV             shift and go to state 26


state 33

    (8) expression -> expression SUB expression1 .
    (10) expression1 -> expression1 . MUL expression2
    (11) expression1 -> expression1 . DIV expression2

    ADD             reduce using rule 8 (expression -> expression SUB expression1 .)
    SUB             reduce using rule 8 (expression -> expression SUB expression1 .)
    LP              reduce using rule 8 (expression -> expression SUB expression1 .)
    VAR             reduce using rule 8 (expression -> expression SUB expression1 .)
    NUM             reduce using rule 8 (expression -> expression SUB expression1 .)
    SIN             reduce using rule 8 (expression -> expression SUB expression1 .)
    COS             reduce using rule 8 (expression -> expression SUB expression1 .)
    TG              reduce using rule 8 (expression -> expression SUB expression1 .)
    CTG             reduce using rule 8 (expression -> expression SUB expression1 .)
    $end            reduce using rule 8 (expression -> expression SUB expression1 .)
    RP              reduce using rule 8 (expression -> expression SUB expression1 .)
    OVER            reduce using rule 8 (expression -> expression SUB expression1 .)
    MUL             shift and go to state 25
    DIV             shift and go to state 26


state 34

    (22) solve -> SOLVE FOR LP . vars RP EQ LP nums RP equation
    (23) vars -> . vars VAR
    (24) vars -> . VAR

    VAR             shift and go to state 45

    vars                           shift and go to state 44

state 35

    (14) expression3 -> LP expression RP .

    POW             reduce using rule 14 (expression3 -> LP expression RP .)
    MUL             reduce using rule 14 (expression3 -> LP expression RP .)
    DIV             reduce using rule 14 (expression3 -> LP expression RP .)
    ADD             reduce using rule 14 (expression3 -> LP expression RP .)
    SUB             reduce using rule 14 (expression3 -> LP expression RP .)
    LP              reduce using rule 14 (expression3 -> LP expression RP .)
    VAR             reduce using rule 14 (expression3 -> LP expression RP .)
    NUM             reduce using rule 14 (expression3 -> LP expression RP .)
    SIN             reduce using rule 14 (expression3 -> LP expression RP .)
    COS             reduce using rule 14 (expression3 -> LP expression RP .)
    TG              reduce using rule 14 (expression3 -> LP expression RP .)
    CTG             reduce using rule 14 (expression3 -> LP expression RP .)
    $end            reduce using rule 14 (expression3 -> LP expression RP .)
    RP              reduce using rule 14 (expression3 -> LP expression RP .)
    OVER            reduce using rule 14 (expression3 -> LP expression RP .)


state 36

    (27) differentiate -> DIFFERENTIATE equation OVER . VAR

    VAR             shift and go to state 46


state 37

    (10) expression1 -> expression1 MUL expression2 .
    (13) expression2 -> expression2 . POW expression3
